<resources>
    <string name="app_name">Cloud Answering Machine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_add_voicemail">AddVoicemailActivity</string>

    <string name="add_voicemail">Add voicemail</string>
    <string name="sender_number">Sender phone number</string>
    <string name="time">Time in DD/MM/YYYY hh:mm</string>
    <string name="duration">Duration in seconds</string>
    <string name="mime_type">MIME type</string>
    <string name="voicemail_store_error">Error in storing voicemail!</string>
    <string name="send">Send</string>
    <string name="record_voice">Record voice</string>

</resources>
